# lib/api-spec/openapi.yaml
@@ -53,6 +53,10 @@ paths:
           in: query
           schema:
             type: string
+        - name: companyProfileId
+          in: query
+          schema:
+            type: integer
       responses:
         "200":
           description: List of jobs
@@ -488,6 +492,8 @@ components:
           type: string
         company:
           type: string
+        companyProfileId:
+          type: ["integer", "null"]
         location:
           type: string
         description:
@@ -537,6 +543,8 @@ components:
           type: string
         company:
           type: string
+        companyProfileId:
+          type: ["integer", "null"]
         location:
           type: string
         description:
